cloudformation/base_resources.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: base stack deployed by code pipeline

Parameters:

  CodeBuildBucketName:
    Description: name of bucket for code build logging
    Type: String
    Default: sean-codebuild-bucket

  CodePipelineBucketName:
    Description: name of bucket for code pipeline artifacts
    Type: String
    Default: sean-codepipeline-bucket

  VpcName:
    Description: name of the vpc
    Type: String
    Default: sandbox

Mappings:
  SubnetConfig:
    GlobalCidr:
      cidr: 10.0.0.0/18
    PublicCidr1:
      cidr: 10.0.0.0/20
    PrivateCidr1:
      cidr: 10.0.16.0/20
    PrivateCidr2:
      cidr: 10.0.32.0/20
    PrivateCidr3:
      cidr: 10.0.48.0/20

  AvailabilityZones:
    az1:
      az: ap-southeast-2a
    az2:
      az: ap-southeast-2b
    az3:
      az: ap-southeast-2c

Resources:
  CodePiplineBucket:
    Type: "AWS::S3::Bucket"
    Properties:
      BucketName: !Ref CodePipelineBucketName
      Tags:
        - Key: Owner
          Value: Sean Turner

  CodeBuildBucket:
    Type: "AWS::S3::Bucket"
    Properties:
      BucketName: !Ref CodeBuildBucketName
      Tags:
        - Key: Owner
          Value: Sean Turner

  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [SubnetConfig, GlobalCidr, cidr]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Ref VpcName
        - Key: Owner
          Value: Sean Turner

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !FindInMap [AvailabilityZones, az1, az]
      CidrBlock: !FindInMap [SubnetConfig, PublicCidr1, cidr]
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-public-subnet-1"
        - Key: Owner
          Value: Sean Turner

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !FindInMap [AvailabilityZones, az1, az]
      CidrBlock: !FindInMap [SubnetConfig, PrivateCidr1, cidr]
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-private-subnet-1"
        - Key: Owner
          Value: Sean Turner

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !FindInMap [AvailabilityZones, az2, az]
      CidrBlock: !FindInMap [SubnetConfig, PrivateCidr2, cidr]
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-private-subnet-2"
        - Key: Owner
          Value: Sean Turner

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !FindInMap [AvailabilityZones, az3, az]
      CidrBlock: !FindInMap [SubnetConfig, PrivateCidr3, cidr]
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-private-subnet-3"
        - Key: Owner
          Value: Sean Turner

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-igw"
        - Key: Owner
          Value: Sean Turner

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-public-rt"
        - Key: Owner
          Value: Sean Turner

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  PublicNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      NetworkAclId: !GetAtt Vpc.DefaultNetworkAcl

  NatEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEip.AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-nat-gw"
        - Key: Owner
          Value: Sean Turner

  NatRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-nat-rt"
        - Key: Owner
          Value: Sean Turner

  NatRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref NatRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref NatRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref NatRouteTable
      SubnetId: !Ref PrivateSubnet2

  PrivateRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref NatRouteTable
      SubnetId: !Ref PrivateSubnet3

Outputs:
  CodePipelineBucketName:
    Description: S3 bucket name for code pipeline
    Value: !Ref CodePiplineBucket
    Export:
      Name: !Sub "${AWS::StackName}"-code-pipeline-bucket-name

  CodeBuildBucketName:
    Description: S3 bucket name for code build
    Value: !Ref CodeBuildBucket
    Export:
      Name: !Sub "${AWS::StackName}"-code-build-bucket-name

  VpcId:
    Description: vpc id
    Value: !Ref Vpc
    Export:
      Name: !Sub "${AWS::StackName}"-vpc-id

  VpcCidr:
    Description: vpc cidr block
    Value: !GetAtt Vpc.CidrBlock

  PublicSubnetId:
    Description: public subnet id
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub "${AWS::StackName}"-code-build-bucket-name

  PrivateSubnetId1:
    Description: private subnet 1 id
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}"-code-build-bucket-name

  PrivateSubnetId2:
    Description: private subnet 2 id
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${AWS::StackName}"-code-build-bucket-name

  PrivateSubnetId3:
    Description: private subnet 3 id
    Value: !Ref PrivateSubnet3
    Export:
      Name: !Sub "${AWS::StackName}"-code-build-bucket-name
