cloudformation/initiator_resources.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: base stack deployed by code pipeline

Parameters:
  # CodeBuildBucketName:
  #   Description: name of bucket for code build logging
  #   Type: String
  #   Default: nzqa-pp2-codebuild-bucket

  # CodePipelineBucketName:
  #   Description: name of bucket for code pipeline artifacts
  #   Type: String
  #   Default: nzqa-pp2-codepipeline-bucket

  VpcName:
    Description: name of the vpc
    Type: String
    Default: codebuild-primary

Mappings:
  SubnetConfig:
    GlobalCidr:
      cidr: 10.1.0.0/18
    PublicCidrA:
      cidr: 10.1.0.0/20
    PrivateCidrA:
      cidr: 10.1.16.0/20
    PrivateCidrB:
      cidr: 10.1.32.0/20
    PrivateCidrC:
      cidr: 10.1.48.0/20

  AvailabilityZones:
    az1:
      az: ap-southeast-2a
    az2:
      az: ap-southeast-2b
    az3:
      az: ap-southeast-2c

Resources:
  # CodePiplineBucket:
  #   Type: "AWS::S3::Bucket"
  #   Properties:
  #     BucketName: !Ref CodePipelineBucketName
  #     Tags:
  #       - Key: OwnerTeam
  #         Value: Consegna
  #       - Key: OwnerTeamEmail
  #         Value: aws.nzqa@consegna.cloud
  #       - Key: ManagedBy
  #         Value: Cloudformation

  # CodeBuildBucket:
  #   Type: "AWS::S3::Bucket"
  #   Properties:
  #     BucketName: !Ref CodeBuildBucketName
  #     Tags:
  #       - Key: OwnerTeam
  #         Value: Consegna
  #       - Key: OwnerTeamEmail
  #         Value: aws.nzqa@consegna.cloud
  #       - Key: ManagedBy
  #         Value: Cloudformation

  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [SubnetConfig, GlobalCidr, cidr]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Ref VpcName
        - Key: OwnerTeam
          Value: Consegna
        - Key: OwnerTeamEmail
          Value: aws.nzqa@consegna.cloud
        - Key: ManagedBy
          Value: Cloudformation

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !FindInMap [AvailabilityZones, az1, az]
      CidrBlock: !FindInMap [SubnetConfig, PublicCidrA, cidr]
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}/public/a"
        - Key: OwnerTeam
          Value: Consegna
        - Key: OwnerTeamEmail
          Value: aws.nzqa@consegna.cloud
        - Key: ManagedBy
          Value: Cloudformation

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !FindInMap [AvailabilityZones, az1, az]
      CidrBlock: !FindInMap [SubnetConfig, PrivateCidrA, cidr]
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}/private/a"
        - Key: OwnerTeam
          Value: Consegna
        - Key: OwnerTeamEmail
          Value: aws.nzqa@consegna.cloud
        - Key: ManagedBy
          Value: Cloudformation

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !FindInMap [AvailabilityZones, az2, az]
      CidrBlock: !FindInMap [SubnetConfig, PrivateCidrB, cidr]
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}/private/b"
        - Key: OwnerTeam
          Value: Consegna
        - Key: OwnerTeamEmail
          Value: aws.nzqa@consegna.cloud
        - Key: ManagedBy
          Value: Cloudformation

  PrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !FindInMap [AvailabilityZones, az3, az]
      CidrBlock: !FindInMap [SubnetConfig, PrivateCidrC, cidr]
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}/private/c"
        - Key: OwnerTeam
          Value: Consegna
        - Key: OwnerTeamEmail
          Value: aws.nzqa@consegna.cloud
        - Key: ManagedBy
          Value: Cloudformation

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref VpcName
        - Key: OwnerTeam
          Value: Consegna
        - Key: OwnerTeamEmail
          Value: aws.nzqa@consegna.cloud
        - Key: ManagedBy
          Value: Cloudformation

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}/public"
        - Key: OwnerTeam
          Value: Consegna
        - Key: OwnerTeamEmail
          Value: aws.nzqa@consegna.cloud
        - Key: ManagedBy
          Value: Cloudformation

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetA

  PublicNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      NetworkAclId: !GetAtt Vpc.DefaultNetworkAcl

  NatEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEip.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value: !Sub "${VpcName}/nat"
        - Key: OwnerTeam
          Value: Consegna
        - Key: OwnerTeamEmail
          Value: aws.nzqa@consegna.cloud
        - Key: ManagedBy
          Value: Cloudformation

  NatRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/nat"
        - Key: OwnerTeam
          Value: Consegna
        - Key: OwnerTeamEmail
          Value: aws.nzqa@consegna.cloud
        - Key: ManagedBy
          Value: Cloudformation

  NatRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref NatRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref NatRouteTable
      SubnetId: !Ref PrivateSubnetA

  PrivateRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref NatRouteTable
      SubnetId: !Ref PrivateSubnetB

  PrivateRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref NatRouteTable
      SubnetId: !Ref PrivateSubnetC

Outputs:
  # CodePipelineBucketName:
  #   Description: S3 bucket name for code pipeline
  #   Value: !Ref CodePiplineBucket
  #   Export:
  #     Name: !Sub "${AWS::StackName}-code-pipeline-bucket-name"

  # CodeBuildBucketName:
  #   Description: S3 bucket name for code build
  #   Value: !Ref CodeBuildBucket
  #   Export:
  #     Name: !Sub "${AWS::StackName}-code-build-bucket-name"

  VpcId:
    Description: vpc id
    Value: !Ref Vpc
    Export:
      Name: !Sub "${AWS::StackName}-vpc-id"

  VpcCidr:
    Description: vpc cidr block
    Value: !GetAtt Vpc.CidrBlock

  PublicSubnetId-A:
    Description: Public Subnet A id
    Value: !Ref PublicSubnetA
    Export:
      Name: !Sub "${AWS::StackName}-public-subnet-a-id"

  PrivateSubnetId-A:
    Description: Private Subnet A id
    Value: !Ref PrivateSubnetA
    Export:
      Name: !Sub "${AWS::StackName}-private-subnet-a-id"

  PrivateSubnetId-B:
    Description: Private Subnet B id
    Value: !Ref PrivateSubnetB
    Export:
      Name: !Sub "${AWS::StackName}-private-subnet-b-id"

  PrivateSubnetId-C:
    Description: Private Subnet C id
    Value: !Ref PrivateSubnetC
    Export:
      Name: !Sub "${AWS::StackName}-private-subnet-c-id"
